--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4    93351  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "mode     12.000     6.500       102.000"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "mode    12.000   6.500      102"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "Dementia   7.207   7.210     7.000"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -912,12 +912,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ratings Dataset"
+    "## Ratings Dataset\n",
+    "\n",
+    "Before we go answering the questions related to the ratings dataset, let's first explore it a bit more generally to see if we can find anything interesting.\n",
+    "- How many people rate an anime instead of only watching it and what proportion rate animes? \n",
+    "- For users that do rate animes, what is their average rating they give out?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1029,7 @@
        "9        1       846     nan"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,28 +1041,77 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 107,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7813737"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "rating_df.shape[0]"
+    "From what we can see from the preview of the dataset, it seems as though this dataset may contain a lot of data where a user watched an anime show, but did not give it a rating. This is represented by the \"nan\" in the rating column which we previously replace \"-1\" with in the initial data cleaning. First I would like to see how many rows of data we have in total, and then try find how many rows contain a rating to eventually find the difference."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total, there are 7813737 rows of data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many rows of data do we have?\n",
+    "print(f\"In total, there are {rating_df.shape[0]} rows of data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 6337241 rows that have ratings\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many rows contain a rating value?\n",
+    "print(f\"There are {rating_df[rating_df.rating.notnull()].shape[0]} rows that have ratings\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This means there are 1476496 rows that do not have ratings\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many rows have empty ratings?\n",
+    "print(f\"This means there are {rating_df[rating_df.rating.isnull()].shape[0]} rows that do not have ratings\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How many people rate an anime instead of only watching it and what proportion rate animes?\n",
+    "To answer this, we need "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1120,7 @@
        "73515"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1140,7 @@
        "69600"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1160,7 @@
        "nan"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1184,7 @@
        "Name: rating, dtype: float64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1307,7 @@
        "[73515 rows x 2 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1430,7 @@
        "[73515 rows x 2 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1461,7 @@
        "Name: rating, Length: 7813737, dtype: bool"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
